--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Сайт тренера</title>
 </head>
 <body>
-  <h1>
+  <h1><img src="img/photo_5352790240785462226_y.jpg" alt="Фото Руслана Волкова" width="250" height="300" align="right">
     Привет! Я Руслан Волков, твой персональный тренер!
   </h1>
   <h2>Помогаю людям достигать своих целей в спорте и здоровье.</h2>
