--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </tr>
     </tbody>
   </table>
-
+<video src="Video-164.mp4" width="300" height="400" autoplay muted controls></video>
   <h2>Выбери свою цель:</h2>
   <form>
     <label for="goals">Цель:</label>
@@ -64,6 +64,16 @@
       <option value="endurance">Повышение выносливости</option>
       <option value="general_fitness">Общая физическая форма</option>
     </select>
+    <form>
+      <p>Имя пользователя:</p>
+      <input align="right" type="text" name="username" size="15" maxlength="15">
+      <p>Пароль:</p>
+      <input type="password" name="password" size="15" maxlength="15">
+  </form>
+  <form>
+    <p> Введите адрес электронной почты:</p>
+    <input type="email" name="email" size="30" maxlength="30">
+    <input type="submit" value="Отправить">
   </form>
   <h2>Контакты:</h2>
   <p>Email: ruskixrpo@gmail.com</p>
