--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <thead>
       <tr>
         <th></th>
-        <th>Se mnou</th>
-        <th>Bez mě</th>
+        <th>Se mnou✅</th>
+        <th>Bez mě❌</th>
       </tr>
     </thead>
     <tbody>
