--- a/index.html
+++ b/index.html
@@ -10,51 +10,37 @@
   </h1>
   <h2 class="podzaholovok">Pomáhám lidem dosahovat jejich cílů ve sportu a zdraví.</h2>
 
-  <h2 class="sluzby">Moje služby:</h2>
+  <h1 class="duvod">Proč si vybrat mě:</h1>
+  <div class="comparison">
+  <div class="column good">
+    <h2>✅ Se mnou</h2>
+    <ul>
+      <li>Naučím správně a bez zranění</li>
+      <li>Podpořím tě a pomohu nevzdat se</li>
+      <li>Program přizpůsobený tvým cílům</li>
+      <li>Rychlý pokrok a dosažení cílů</li>
+      <li>Vyvážená strava pro dosažení cílů</li>
+    </ul>
+  </div>
+
+  <div class="column bad">
+    <h2>❌ Bez mě</h2>
+    <ul>
+      <li>Chyby a možné zranění</li>
+      <li>Snadno ztratíte motivaci a přestanete</li>
+      <li>Stejné programy pro všechny</li>
+      <li>Pomalý pokrok nebo žádné výsledky</li>
+      <li>Nesprávná strava bránící pokroku</li>
+    </ul>
+  </div>
+</div>
+<h2 class="sluzby">Moje služby:</h2>
   <ul>
     <li>Osobní tréninky</li>
     <li>Skupinové lekce</li>
     <li>Online konzultace</li>
     <li>Plánování stravy</li>
   </ul>
-
-  <h1>Proč si vybrat mě:</h1>
-  <table border="1" cellpadding="5">
-    <thead>
-      <tr>
-        <th></th>
-        <th>Se mnou✅</th>
-        <th>Bez mě❌</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th>Technika provedení</th>
-        <td>Naučím správně a bez zranění</td>
-        <td>Chyby a možné zranění</td>
-      </tr>
-      <tr>
-        <th>Motivace</th>
-        <td>Podpořím tě a pomohu nevzdat se</td>
-        <td>Snadno ztratíte motivaci a přestanete</td>
-      </tr>
-      <tr>
-        <th>Individuální přístup</th>
-        <td>Program přizpůsobený tvým cílům a možnostem</td>
-        <td>Stejné programy pro všechny</td>
-      </tr>
-      <tr>
-        <th>Výsledky</th>
-        <td>Rychlý pokrok a dosažení cílů</td>
-        <td>Pomalý pokrok nebo žádné výsledky</td>
-      </tr>
-      <tr>
-        <th>Stravovací plán</th>
-        <td>Vyvážená strava pro dosažení cílů</td>
-        <td>Nesprávná strava bránící pokroku</td>
-      </tr>
-    </tbody>
-  </table>
 
   <video src="Video-164.mp4" width="300" height="400" autoplay muted controls></video>
 
