--- a/index.html
+++ b/index.html
@@ -124,8 +124,14 @@
         <a href="https://www.facebook.com/ruskixrpo" target="_blank">ruskixrpo</a>
       </div>
 
-    </div>
-  </div>
+    </div> <!-- закрываем contacts-grid -->
+  </div> <!-- закрываем contacts-container -->
 </section>
+<div class="card">
+  <h2>Rezervovat trénink</h2>
+  <p>Chcete-li si vybrat datum a čas, klikněte na tlačítko níže.</p>
+  <a href="login.html" class="card-btn">Výběr data a času</a>
+</div>
+</style>
 </body>
 </html>
